switch to php's serializer and wddx code over the builtin approach
git-svn-id: http://svn.php.net/repository/pear/packages/DBA_Relational/trunk@97010 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -42,5 +42,9 @@ No notes is good notes.
                 </dir>
             </dir>
         </filelist>
+    <deps>
+        <dep type="php" rel="ge" version="4.0.4pl1" />
+        <dep type="pkg" rel="has">DBA</dep>
+    </deps>
     </release>
 </package>
