fix missing handle, bump version
git-svn-id: http://svn.php.net/repository/pear/packages/DBA_Relational/trunk@98276 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -17,6 +17,7 @@ Table management extension to DBA
             <role>lead</role>
         </maintainer>
         <maintainer>
+            <user>undefined</user>
             <name>Jacob Lee</name>
             <email>jacobswell4u@yahoo.com</email>
             <role>contributor</role>
