Moved special functions to separate file, added many new sql-type functions
git-svn-id: http://svn.php.net/repository/pear/packages/DBA_Relational/trunk@111071 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -16,12 +16,6 @@ Table management extension to DBA
             <email>busterb@mail.utexas.edu</email>
             <role>lead</role>
         </maintainer>
-        <maintainer>
-            <user>undefined</user>
-            <name>Jacob Lee</name>
-            <email>jacobswell4u@yahoo.com</email>
-            <role>contributor</role>
-        </maintainer>
     </maintainers>
 
     <release>
@@ -39,6 +33,7 @@ Table management extension to DBA
                 <file role="php">Relational.php</file>
                 <file role="php">Table.php</file>
                 <file role="php">Toolbox.php</file>
+                <file role="php">Functions.php</file>
                 <dir name="tests" role="test">
                     <file role="test">empSchema.php</file>
                     <file role="test">hatSchema.php</file>
