added DBA_Relationa::dropTable(), a new temporary table class
git-svn-id: http://svn.php.net/repository/pear/packages/DBA_Relational/trunk@111084 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -34,6 +34,7 @@ Table management extension to DBA
                 <file role="php">Table.php</file>
                 <file role="php">Toolbox.php</file>
                 <file role="php">Functions.php</file>
+                <file role="php">TempTable.php</file>
                 <dir name="tests" role="test">
                     <file role="test">empSchema.php</file>
                     <file role="test">hatSchema.php</file>
